--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-  "node": ">=20"
-},
+ "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "yarn rebuild esbuild && yarn install @rollup/rollup-linux-x64-gnu --save-dev"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
+  
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@nestjs/common": "^10.0.0",
@@ -24,7 +22,6 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.0.0",
-    "@rollup/rollup-linux-x64-gnu": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "vite": "^4.4.9"
