--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,16 @@
 {
-  "buildCommand": "yarn install && yarn build"
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  },
+  "nodeVersion": "18.x"
 }
